syntax = "proto3";

package tools.teal.pulsar.demoapp.schemas_tenant.v1;

enum CoffeeEnum {
  COFFEE_ENUM_UNSPECIFIED = 0;
  COFFEE_ENUM_ESPRESSO = 1;
  COFFEE_ENUM_AMERICANO = 2;
  COFFEE_ENUM_CAPPUCCINO = 3;
  COFFEE_ENUM_FRAPPE = 4;
  COFFEE_ENUM_FLAT_WHITE = 5;
}

message SimpleMessage {
  int32 x = 1;
  int32 y = 2;
}

message ProtobufNativeDemoMessage {
  double double = 1;
  float float = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  sint32 sint32 = 7;
  sint64 sint64 = 8;
  fixed32 fixed32 = 9;
  fixed64 fixed64 = 10;
  sfixed32 sfixed32 = 11;
  sfixed64 sfixed64 = 12;
  bool bool = 13;
  string string = 14;
  bytes bytes = 15;
  CoffeeEnum enum = 16;
  SimpleMessage nested_message = 17;
  map<string, int64> map = 18;
  repeated string repeated = 19;
  oneof oneof {
    string oneof_string = 100;
    int32 oneof_int32 = 101;
    bool oneof_bool = 102;
  }
}
